src/test/ui/error-codes/E0452.stderr
error[E0452]: malformed lint attribute
  --> $DIR/E0452.rs:11:10
   |
LL | #![allow(foo = "")] //~ ERROR E0452
   |          ^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0452"
