src/test/ui/error-codes/E0452.rs
#![allow(foo = "")] //~ ERROR E0452

fn main() {
}
